--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.10"
+    "element-plus": "^2.8.5",
+    "vue": "^3.5.10",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "^5.5.3",
-    "vite": "^5.4.8",
+    "vite": "^5.4.9",
     "vue-tsc": "^2.1.6"
   }
 }
