--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,22 +1,9 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "target": "esnext",
+    "module": "commonjs"
   },
-  "include": ["vite.config.ts"]
+  "include": ["server/**/*.ts"],
+  "exclude": ["node_modules"]
 }
