--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.5",
+    "font-awesome": "^4.7.0",
+    "marked": "^14.1.3",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
