--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.8.6",
     "font-awesome": "^4.7.0",
     "marked": "^14.1.3",
+    "pinia": "^2.2.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
